--- a/style.css
+++ b/style.css
@@ -4,5 +4,18 @@
     padding:0;
 }
 .cabecalho{
-    
+  background-color:seagreen;
+  color:aliceblue;
+  display:flex;
+  justify-content:space-around;
+  align-items:center;
+  padding:24px 0;
+}
+.cabecalho-imagem{
+width:20% 0;
+}
+.cabecalho-lista-imagem{
+    display:inline-block;
+    margin:0 16px;
+    font-size:24px;
 }
