--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@
   padding:24px 0;
 }
 .cabecalho-imagem{
-width:20% 0;
+width:15%;
 }
 .cabecalho-lista-imagem{
     display:inline-block;
     margin:0 16px;
-    font-size:24px;
+    font-size:20px;
 }
 
 .escola-imagem{
