--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding:0;
 }
 .cabecalho{
-  background-color:seagreen;
+  background-color:#2e8b57;
   color:aliceblue;
   display:flex;
   justify-content:space-around;
@@ -22,4 +22,7 @@ width:15%;
 
 .escola-imagem{
   width: 25%;
+}
+
+.imagem{background-image: linear-gradient(#2e8b57,#4dc287e6)
 }
