--- a/style.css
+++ b/style.css
@@ -1,35 +1,43 @@
-.cabecalho-lista-item
-{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.cabecalho{
-  background-color:#2e8b57;
-  color:aliceblue;
-  display:flex;
-  justify-content:space-around;
-  align-items:center;
-  padding:24px 0;
+
+.cabecalho {
+  background-color: #424E61;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 24px 0;
 }
+
 .cabecalho-imagem{
-width:15%;
+  width: 15%;
 }
-.cabecalho-lista-imagem{
-    display:inline-block;
-    margin:0 16px;
-    font-size:20px;
+
+.cabecalho-lista-item{
+  display: inline-block;
+  margin: 0 16px;
+  font-size: 20px;
 }
 
 .escola-imagem{
   width: 25%;
 }
 
-.escola-conteudo{
-width: 35%;
+.escola{
+  background-image: linear-gradient(#424E61,#16CFF8);
+  color:white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
 }
 
-.imagem{
-  background-image: linear-gradient(#2e8b57,#4dc287e6);
-  color:aliceblue;
-  display: flex;
+.escola-div-conteudo{
+  width: 35%;
+}
+.escola-titulo{
+  padding: 24px 0;
 }
