--- a/style.css
+++ b/style.css
@@ -16,17 +16,15 @@
   width: 15%;
 }
 
-.cabecalho-lista-item{
-  display: inline-block;
-  margin: 0 16px;
-  font-size: 20px;
+.cabecalho-lista-item a{
+text-decoration: none;
+color:white;
 }
-
 .escola-imagem{
   width: 25%;
 }
 
-.escola{
+#escola{
   background-image: linear-gradient(#066744,#14c785);
   color:white;
   display: flex;
@@ -43,6 +41,10 @@
 }
 body{
   font-family: 'vollkorn', sans-serif;
+}
+#estudante{
+  padding: 24px 0;
+
 }
 .estudante-imagem{
   width: 120px;
