--- a/style.css
+++ b/style.css
@@ -57,3 +57,15 @@ body{
   text-align: center;
   padding: 16px 0;
 }
+.estudante-titulo{
+  text-align: center;
+  padding: 24px 0;
+}
+.rodape{
+  background-color: black;
+  text-align: center;
+}
+.rodape-imagem{
+  height: 60px;
+  padding: 12px 0;
+}
