--- a/style.css
+++ b/style.css
@@ -67,5 +67,19 @@ body{
 }
 .rodape-imagem{
   height: 60px;
-  padding: 12px 0;
+  padding: 12px 0;* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .cabecalho {
+    background-color: #066744;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+  …  text-align: center;
+    padding: 24px 0;
+  }
+  .rodape{
+    background-color: black;
 }
