--- a/style.css
+++ b/style.css
@@ -83,3 +83,11 @@ body{
   .rodape{
     background-color: black;
 }
+.CCM{
+  background-color: #066744;
+  padding: 24px 0;
+}
+.Nome{
+  background-color: #066744;
+  padding: 24px 0;
+}
